src/components/Calendar/Calendar.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/globals" as *;
@use "../../styles/partials/variables" as *;
@use "../../styles/partials/typography" as *;

:root {
  --fc-event-bg-color: #f9f9f9;
  --fc-event-border-color: transparent;
  --fc-event-color: $seconday-black;
}

.calendar-container {
  height: 95vh;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.fc {
  flex: 1;
  overflow-y: auto;
}

.custom-toolbar {
  display: flex;
  align-items: center;
  position: relative;
  margin-bottom: 1rem;
}

.toolbar-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 2;
}

.navigation {
  display: flex;
  align-items: flex-start;
  width: 100%;
  justify-content: space-between;

  &__title {
    display: flex;
    text-align: center;
    font-size: 0rem;
    align-items: center;
  }
}

.nav-button {
  display: flex;
  align-items: center;
  justify-content: center;
  background: none;
  border: none;
  font-size: 1.5rem;
  color: $primary-blue;
  cursor: pointer;
  transition: transform 0.3s ease, background-color 0.3s ease;

  &:hover {
    color: $primary-dark-blue;
    transform: scale(1.05);
  }
}

.calendar-title {
  width: 10rem;
  font-size: 1.2rem;
  font-weight: bold;
  margin: 0 15px;

  @include tablet {
    min-width: 16.5rem;
    font-size: 1.25rem;
  }
}

.view-buttons {
  display: flex;
  justify-content: center;
  margin-top: 0.5rem;

  &__btn {
    border: 1px solid $primary-blue;
    margin: 0 5px;
    padding: 4px 8px;
    border-radius: 5px;
    background: none;
    cursor: pointer;
    color: $primary-blue;
    font-size: 0.8rem;
    transition: transform 0.3s ease, background-color 0.3s ease;

    &:hover {
      transform: scale(1.05);
    }

    @include tablet {
      font-size: 1rem;
    }

    &.active {
      background: $primary-blue;
      color: $white;
    }
  }
}

.today-button:hover,
.view-button:hover {
  background: $primary-dark-blue;
  color: $white;
}

.fc .fc-toolbar-title {
  font-size: 1rem;
}

.fc .fc-view-harness {
  border-radius: 12px;
  overflow: hidden;
}

.fc .fc-daygrid-day-number {
  font-size: 0.8rem;
  font-weight: 500;
  color: $seconday-black;
}

.fc .fc-daygrid-event {
  font-size: 0.7rem;
  color: $seconday-black !important;
  background-color: #f9f9f9;
  border-left: 4px solid $primary-blue;
  border-radius: 6px;
  padding: 4px 6px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.fc .fc-daygrid-event:hover {
  background-color: #e6e6e6;
}

.fc .fc-event-title {
  color: $seconday-black !important;
  font-weight: 500;
  font-size: 0.6rem;
}

.fc .fc-timegrid-slot-label {
  font-size: 0.75rem;
  color: #555555;
}

.fc .fc-timegrid-col-header-cell {
  font-size: 0.85rem;
  font-weight: 600;
}

.fc .fc-scrollgrid {
  border-radius: 12px;
}

.fc-daygrid-event-dot {
  display: none;
}

.fc .fc-timegrid {
  border-color: transparent;
}

.fc .fc-timegrid-slot {
  height: auto;
}

.fc .fc-timegrid-col-frame {
  background: $white;
}

.fc .fc-timegrid-event {
  font-size: 0.7rem;
  color: $seconday-black;
  background-color: #f9f9f9;
  border-left: 4px solid $primary-blue;
  border-radius: 6px;
  padding: 2px 2px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.fc .fc-timegrid-event:hover {
  background-color: #e6e6e6;
}

.fc .fc-timegrid-slot-label {
  display: none;
}

.fc .fc-timegrid-axis-cushion {
  display: none;
}

.fc .fc-timegrid-day-header {
  font-size: 0.85rem;
  font-weight: 600;
  color: $seconday-black;
}

.fc-timegrid-event .fc-event-time {
  color: $seconday-black;
  font-weight: 500;
  margin-bottom: 0;
  display: flex;
  align-items: center;
  font-size: 0.5rem;
}

.fc-direction-ltr .fc-daygrid-event .fc-event-time {
  font-size: 0.6rem;
}

.fc .fc-timegrid-slot-label {
  display: block;
  padding: 0 10px;
}

.fc .fc-timegrid-axis-cushion,
.fc .fc-timegrid-slot-label {
  color: $seconday-black;
  font-size: 0.75rem;
  font-weight: 500;
}

.fc .fc-col-header-cell.fc-day-today,
.fc .fc-timegrid-col.fc-day-today .fc-timegrid-col-frame,
.fc .fc-daygrid-day.fc-day-today {
  background-color: $light-blue;
}

